--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="header">
         <div class="overlay">
           <div class="header-container">
-                <h1 class="logo">Paul Anthony Garcia</h1>
+                <h1 class="logo">PAUL ANTHONY GARCIA</h1>
           </div>
         </div>
       </header>
@@ -28,11 +28,13 @@
       <footer class="footer">
         <div class="footer-container">
           <hr class="top-line">
-          <h3>FOLLOW</h3>
+          <a href="https://linktr.ee/Picksalot">
+            <h3>FOLLOW</h3>
+          </a>
           <hr class="bottom-line">
           <div class="icons">
             <a href="https://linktr.ee/Picksalot">
-              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-instagram icon"></i>
             </a>
             <a href="https://linktr.ee/Picksalot">
               <i class="fa-brands fa-youtube"></i>
