--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <main class="main">
         <div class="main-container">
           <h2>NEW ALBUM "YOU"</h2>
-          <img src="./images/album.png" alt="album 'You'">
+          <a href="https://linktr.ee/Picksalot">
+            <img src="./images/album.png" alt="album 'You'">
+          </a>
           <a href="https://linktr.ee/Picksalot" class="main-button">LISTEN</a>
         </div>
       </main>
