--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               <i class="fa-brands fa-instagram icon"></i>
             </a>
             <a href="https://linktr.ee/Picksalot">
+              <i class="fa-brands fa-reddit"></i>
+            </a>
+            <a href="https://linktr.ee/Picksalot">
               <i class="fa-brands fa-youtube"></i>
             </a>
             <a href="https://linktr.ee/Picksalot">
