--- a/index.html
+++ b/index.html
@@ -1,56 +1,124 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Paul Anthony Garcia</title>
-</head>
-<body class="body">
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
 
-      <header class="header">
-        <div class="overlay">
-          <div class="header-container">
-                <h1 class="logo">PAUL ANTHONY GARCIA</h1>
-          </div>
-        </div>
-      </header>
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    text-decoration: none;
+}
 
-      <main class="main">
-        <div class="main-container">
-          <h2>NEW ALBUM "YOU"</h2>
-          <a href="https://linktr.ee/Picksalot">
-            <img src="./images/album.png" alt="album 'You'">
-          </a>
-          <a href="https://linktr.ee/Picksalot" class="main-button">LISTEN</a>
-        </div>
-      </main>
+.body {
+    background-color: #ddf1f4;
+    font-family: 'Roboto Condensed', sans-serif;
+    letter-spacing: 2.5px;
+}
 
-      <footer class="footer">
-        <div class="footer-container">
-          <hr class="top-line">
-          <a href="https://linktr.ee/Picksalot">
-            <h3>FOLLOW</h3>
-          </a>
-          <hr class="bottom-line">
-          <div class="icons">
-            <a href="https://linktr.ee/Picksalot">
-              <i class="fa-brands fa-instagram icon"></i>
-            </a>
-            <a href="https://linktr.ee/Picksalot">
-              <i class="fa-brands fa-reddit"></i>
-            </a>
-            <a href="https://linktr.ee/Picksalot">
-              <i class="fa-brands fa-youtube"></i>
-            </a>
-            <a href="https://linktr.ee/Picksalot">
-              <i class="fa-brands fa-spotify"></i>
-            </a>
-          </div>
-        </div>
-      </footer>
 
-      <script src="https://kit.fontawesome.com/81d5a8ff0d.js" crossorigin="anonymous"></script>
-</body>
-</html>
+
+.header {
+    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.1)), url(./images/paul.png);
+    background-size: cover;
+    color: #ddf1f4;
+    min-height: 400px;
+    margin-top: 30px;
+    font-weight: bold;
+}
+
+.header-container {
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-container
+.logo {
+    font-weight: 300;
+    font-size: 2.5rem;
+}
+
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+}
+
+.main-container {
+    height: 500px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.main-container
+h2 {
+    font-weight: 400;
+}
+
+.main-button {
+    border-radius: 5px;
+    width: 120px;
+    height: 40px;
+    background: #1DAFD6;
+    color: #ddf1f4;
+    border: none;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-container {
+    height: 160px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer-container
+hr {
+    border: 2px solid black;
+}
+
+.footer-container
+.top-line{
+    width: 140px;
+}
+
+.footer-container
+.bottom-line{
+    width: 300px;
+}
+
+.footer-container
+h3 {
+    font-weight: 400;
+    color: black;
+}
+
+.footer-container
+.icons {
+    width: 240px;
+    height: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-container
+.icons
+a {
+    color: #1DAFD6;
+}
+
+@media (min-width: 800px) {
+    .header {
+        width: 80%;
+        margin: 30px auto;
+    }
+}
+
